overscroll-behavior: none doesn't prevent overscroll when page is too small to scroll https://bugs.webkit.org/show_bug.cgi?id=244232 rdar://99018981

Reviewed by Simon Fraser.

We should not disallow overscroll behavior on a non-scrollable document
since it should prevent rubberbanding if overscroll behavior ia none

* Source/WebCore/page/FrameView.cpp:
(WebCore::FrameView::horizontalOverscrollBehavior const):
(WebCore::FrameView::verticalOverscrollBehavior const):
* Source/WebCore/rendering/RenderLayerScrollableArea.cpp:
(WebCore::RenderLayerScrollableArea::horizontalOverscrollBehavior const):
(WebCore::RenderLayerScrollableArea::verticalOverscrollBehavior const):

Canonical link: https://commits.webkit.org/259227@main